--- a/collecor/src/main/resources/static/css/paginas/favoritos.css
+++ b/collecor/src/main/resources/static/css/paginas/favoritos.css
@@ -220,3 +220,11 @@ input[type=radio]:checked ~ label{
   color: #232323;
   font-weight: bold;
 }
+
+#deleteIcon{
+  height: 28px;
+}
+#deleteIcon:hover{
+  transform: scale(2.1);
+  transition: all 0.5s;
+}
