--- a/collecor/src/main/resources/templates/favoritos.html
+++ b/collecor/src/main/resources/templates/favoritos.html
@@ -79,6 +79,11 @@
             <div class="pt-3 px-3 mb-5" th:each="l : ${list}" style="width: 350px;">
               <div class="card">
                 <a th:href="${l.contentPath}" target="_blank"><img th:src="${l.imagePath}" class="card-img-top" style="height: 290px; width: 100%;" alt="..."></a>
+                <form method="post" th:action= "@{/fv/favorite/} +${#authentication.getName()} + '/' + ${l.id}" onsubmit="favoriteSuccess">
+                  <button type="submit" class="position-absolute top-0 end-0">
+                    <img src="imgs/favoritos/delete.png" id="deleteIcon" alt="">
+                  </button>
+                </form>
                 <div class="card-body">
                   <p class="card-title" th:text="${l.name}" style="font-size: larger; font-weight: 500;"></p>
                   <p class="card-text" th:text="${l.description}" data-ls-module="charCounter"></p>
