--- a/collecor/src/main/resources/templates/index.html
+++ b/collecor/src/main/resources/templates/index.html
@@ -19,13 +19,13 @@
 
     <div class="princ row px-5">
       <div class="astro col-5">
-        <img src="imgs/home/astronauta.png" alt="" style="height: 100%; ">
+        <img src="imgs/home/astronauta.png" alt="" style="height: 100%;">
       </div>
       <div class="title col-7 d-flex justify-content-center align-items-center flex-column">
         <p class="text-white">Visual Vision</p>
         <div class="p2">
           <p class="text-white ">Sejam Bem Vindos(as)
-          <a href="/login" class="btn rounded-pill text-white" role="button" style="height: 45px; width: 120px; font-size: 22.5px;">Entrar</a></p>
+          <a href="/login" class="btn rounded-pill text-white" role="button" style="height: 45px; width: 120px; font-size: 22.5px;" sec:authorize="!isAuthenticated">Entrar</a></p>
         </div>
       </div>
     </div>
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <div class="medio row px-5">
+    <div class="medio row px-5 guttee">
      <div class="text-white col-8 d-flex justify-content-center align-items-center ">
        <p>Compartilhe projetos em tempo real</p>
      </div>
