--- a/collecor/src/main/resources/templates/upload.html
+++ b/collecor/src/main/resources/templates/upload.html
@@ -18,37 +18,41 @@
     
     <div class="container-fluid d-flex justify-content-center my-4">
       <form  class="rounded-5 content p-5 col-12"method="post" action="/products/uploadArquivo" enctype="multipart/form-data" style="height: 88vh;">
+        <div class="alert alert-danger d-flex justify-content-center" th:if="${param.error}" id="loginF" role="alert">
+          Já existe um produto com esse nome
+        </div>
         <div class="row">
           <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
           <div class="caixa_upp d-flex flex-column justify-content-center align-items-center col-5 m-0" >
               <img src="/imgs/upload/bt upload icon.png" style="width: 200px; height: 200px" alt="" srcset="">
               <div class='input-wrapper text-white'>
                 <label for='input-file'> Selecionar um arquivo </label>
-                <input id='input-file' type='file' name="file" onchange='updateFileName()' />
+                <input id='input-file' type='file' required name="file" onchange='updateFileName()' />
                 <span id='file-name' class="m-0"></span>
               </div>
           </div>
           <div class="col-7 row">
             <div class="input-group mb-3">
               <span class="input-group-text text-white border-0" id="basic-addon1">Nome</span>
-              <input type="text" class="form-control" maxlength="55" placeholder="Gatinho astronauta" name="name" aria-label="Username" aria-describedby="basic-addon1">
+              <input type="text" class="form-control" maxlength="55" placeholder="Gatinho astronauta" name="name" required aria-label="Username" aria-describedby="basic-addon1">
             </div>
             <div class="input-group py-5">
               <span class="input-group-text text-white border-0">Descrição</span>
               <textarea class="form-control" style="height: 180px;" name="description"  placeholder="Imagem de um gatinho astronauta brincando com o planeta terra" aria-label="With textarea" maxlength="200"></textarea>
             </div>
-            <select class="form-select mx-3" aria-label="Default select example" name="type" onchange="handleSelectChange(this)">
-              <option selected disabled>Tipo de arquivo</option>
+            <select class="form-select mx-3" name="type" required onchange="handleSelectChange(this)">
+              <option value="" selected hidden>Que tipo de arquivo está envindo?</option>
               <option value="1">Video</option>
               <option value="2">Texto</option>
               <option value="3">Imagem</option>
+              <option value="4">Audio</option>
             </select>
             <div class="row">
               <div class="mt-3 p-3 col-5" id="imageC">
                 <label class="picture rounded-4" for="picture__input" tabIndex="0">
                   <span class="picture__image"></span>
                 </label>
-                <input type="file" name="image" id="picture__input">
+                <input type="file" name="image" value="" id="picture__input">
               </div>
               <input type="text" class="form-control visually-hidden" maxlength="55" placeholder="Gatinho astronauta" th:value="${#authentication.getName()}" name="userName" aria-label="Username" aria-describedby="basic-addon1">
               <button type="submit" class="rounded-4 text-white" style="margin-left: 25%; margin-top: 25%;">Enviar</button>
@@ -61,60 +65,7 @@
     <div th:replace="~{fragments :: footer}"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/loginpopup.js"></script>
-    <script>
-      function handleSelectChange(select) {
-        var selectedOption = select.options[select.selectedIndex];
-        
-        if (selectedOption.value === "3") {
-          isImage();
-        }else{
-          whithoutImage()
-        }
-      }
-      function isImage() {
-        document.getElementById("imageC").style.visibility = "hidden";
-      }
-      function whithoutImage() {
-        document.getElementById("imageC").style.visibility = "visible";
-      }
+    <script src="js/upload.js"></script>
 
-      const inputFile = document.querySelector("#picture__input");
-const pictureImage = document.querySelector(".picture__image");
-const pictureImageTxt = "Selecione uma imagem";
-pictureImage.innerHTML = pictureImageTxt;
-
-inputFile.addEventListener("change", function (e) {
-  const inputTarget = e.target;
-  const file = inputTarget.files[0];
-
-  if (file) {
-    const reader = new FileReader();
-
-    reader.addEventListener("load", function (e) {
-      const readerTarget = e.target;
-
-      const img = document.createElement("img");
-      img.src = readerTarget.result;
-      img.classList.add("picture__img");
-
-      pictureImage.innerHTML = "";
-      pictureImage.appendChild(img);
-    });
-
-    reader.readAsDataURL(file);
-  } else {
-    pictureImage.innerHTML = pictureImageTxt;
-  }
-});
-
-function updateFileName() {
-  const input = document.getElementById('input-file');
-  const fileName = input.files[0].name;
-  const fileNameSpan = document.getElementById('file-name');
-  fileNameSpan.textContent = fileName;
-}
-
-
-    </script>
   </body>
 </html>
