--- a/collecor/src/main/resources/static/css/paginas/profile.css
+++ b/collecor/src/main/resources/static/css/paginas/profile.css
@@ -48,3 +48,16 @@ body{
   transform: scale(2.1);
   transition: all 0.5s;
 }
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
