--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -43,6 +43,59 @@
           <div th:replace="fragments :: empty"></div>
         </div>
 
+        <div class="">
+          <span class="close">&times;</span>
+          <div class="container ">
+              <form class="row gx-5" method="post">
+                <div class="col-12">
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/animeAstro.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/animeAstro2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/astroFofa.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/astroFofa2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/astroFofo.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/astroFofo2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/menina_caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/rino_1.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/rino_2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/zumbi.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                  <button class="border-0" style="background-color: transparent;">
+                    <img src="/imgs/profileIcons/zumbi2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
+                  </button>
+                </div>
+                <div class="text-center"><button type="submit" class="btn btn-color btn-outline-success px-5 mb-5 w-100">Salvar</button></div>
+                  <!--<div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
+                    Registered? <a href="#" class="text-dark fw-bold"> Create an
+                      Account</a>
+                  </div>-->
+                </div>
+              </form>
+            </div>
+        </div>
+      </div> 
+
         <div class="pt-3 px-3 mb-5" th:each="l : ${list}" style="width: 350px;">
           <p class="visually-hidden" th:id= "${l.id}"></p>
           <div class="card">
@@ -51,6 +104,7 @@
               <input type="text" class="visually-hidden" th:value="${l.imagePath}" name="image">
               <input type="text" class="visually-hidden" th:value="${l.contentPath}" name="content">
               <button type="submit" class="position-absolute top-0 end-0"><img src="imgs/perfil/delete.png" id="deleteIcon" alt=""></button>
+              
             </form>
             <div class="card-body">
               <p class="card-title" th:text="${l.name}" style="font-size: larger; font-weight: 500;"></p>
