--- a/collecor/src/main/resources/static/css/paginas/profile.css
+++ b/collecor/src/main/resources/static/css/paginas/profile.css
@@ -17,6 +17,7 @@ body{
 }
 .row{
   --bs-gutter-x: 0;
+  width: 100%;
 }
 .card{
   border: none;
@@ -61,3 +62,4 @@ body{
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
+
