--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/paginas/profile.css">
     <link rel="stylesheet" href="css/fragments/navbar.css">
     <link rel="stylesheet" href="css/fragments/footerpage.css">
-    <link rel="stylesheet" href="css/fragments/popup.css"> 
-
+    <link rel="stylesheet" href="css/fragments/popup.css">
+    <link rel="stylesheet" href="css/paginas/profile.css"> 
+    <style>
+      .modal-content{
+        width: 100%;
+      }
+    </style>
     <title>Perfil</title>
   </head>
   <body>
@@ -35,64 +39,67 @@
         <a href="/upload" class="btn rounded-pill col-1" style="height: 40px; width: 120px; font-size: 20px;">Adicionar</a>
       </div>
     </div>
+
+      <div class="container ">
+        <div class="modal-content">
+          <span class="close2 close">&times;</span>
+          <div class="container">
+            <div class="row">
+                <div class="card my-5" style="background-color: transparent;">     
+                  <form class="row gx-5" style="background-color: transparent;" method="post">
+                    <div class="col-12 my-5">
+                      <input type="text" id="paths" class="visually-hidden">
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage()">
+                        <img src="/imgs/profileIcons/animeAstro.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="animeAstro" alt=""> 
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage2()">
+                        <img src="/imgs/profileIcons/caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="caveira" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage3()">
+                        <img src="/imgs/profileIcons/zumbi.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="zumbi" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage4()">
+                        <img src="/imgs/profileIcons/animeAstro2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="animeAstro2" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage5()">
+                        <img src="/imgs/profileIcons/menina_caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="menina_caveira" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage6()">
+                        <img src="/imgs/profileIcons/astroFofo.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofo" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage7()">
+                        <img src="/imgs/profileIcons/astroFofo2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofo2" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage8()">
+                        <img src="/imgs/profileIcons/astroFofa.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofa" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage9()">
+                        <img src="/imgs/profileIcons/astroFofa2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofa2" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage10()">
+                        <img src="/imgs/profileIcons/rino_1.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rino_1" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage11()">
+                        <img src="/imgs/profileIcons/rino_2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rino_2" alt="">
+                      </button>
+                      <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage12()">
+                        <img src="/imgs/profileIcons/zumbi2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="zumbi2" alt="">
+                      </button>
+                    </div>
+                    <div class="text-center"><button type="submit" class="btn btn-color btn-outline-success px-5 mb-5 w-100">Salvar</button></div>
+                  </form>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     <!--Content-Content-->
     <div class="colunmn col pt-4">
       <!--content-content-->
       <div class="row col-12 justify-content-center">
         <div th:if= "${#lists.isEmpty(list)}">
           <div th:replace="fragments :: empty"></div>
-        </div>
-
-        <div class="">
-          <span class="close">&times;</span>
-          <div class="container ">
-              <form class="row gx-5" method="post">
-                <div class="col-12">
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/animeAstro.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/animeAstro2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/astroFofa.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/astroFofa2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/astroFofo.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/astroFofo2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/menina_caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/rino_1.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/rino_2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/zumbi.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                  <button class="border-0" style="background-color: transparent;">
-                    <img src="/imgs/profileIcons/zumbi2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle"  alt="">
-                  </button>
-                </div>
-                <div class="text-center"><button type="submit" class="btn btn-color btn-outline-success px-5 mb-5 w-100">Salvar</button></div>
-                  <!--<div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
-                    Registered? <a href="#" class="text-dark fw-bold"> Create an
-                      Account</a>
-                  </div>-->
-                </div>
-              </form>
-            </div>
         </div>
       </div> 
 
@@ -120,8 +127,6 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/loginpopup.js"></script>
-    <script>
-
-    </script>
+    <script src="js/profile.js"></script>
   </body>
 </html>
