--- a/collecor/src/main/resources/static/css/paginas/profile.css
+++ b/collecor/src/main/resources/static/css/paginas/profile.css
@@ -49,17 +49,19 @@ body{
   transform: scale(2.1);
   transition: all 0.5s;
 }
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.closeEditor {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
-
+.closeEditor:hover,
+.closeEditor:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+#btnEdit:hover,
+#btnEdit:focus{
+  cursor: pointer;
+}
