update filtrar loja

--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -87,6 +87,44 @@
                           <img src="/imgs/profileIcons/rino_2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rino_2" alt="">
                         </button>
                         <hr class="m-5" style="color: aqua; size: 20px;">
+                      <!--capa-->
+                        <input type="text" id="paths" name="path" class="visually-hidden" required oninvalid="this.setCustomValidity ('Escolha uma imagem')">
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage()">
+                          <img src="/imgs/profileIcons/animeAstro.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="animeAstro" alt=""> 
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage4()">
+                          <img src="/imgs/profileIcons/animeAstro2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="animeAstro2" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage8()">
+                          <img src="/imgs/profileIcons/astroFofa.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofa" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage9()">
+                          <img src="/imgs/profileIcons/astroFofa2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofa2" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage6()">
+                          <img src="/imgs/profileIcons/astroFofo.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofo" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage7()">
+                          <img src="/imgs/profileIcons/astroFofo2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofo2" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage3()">
+                          <img src="/imgs/profileIcons/zumbi.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="zumbi" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage2()">
+                          <img src="/imgs/profileIcons/caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="caveira" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage12()">
+                          <img src="/imgs/profileIcons/zumbi2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="zumbi2" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage5()">
+                          <img src="/imgs/profileIcons/menina_caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="menina_caveira" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage10()">
+                          <img src="/imgs/profileIcons/rino_1.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rino_1" alt="">
+                        </button>
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage11()">
+                          <img src="/imgs/profileIcons/rino_2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rino_2" alt="">
+                        </button>
                     </div>
                     <div class="text-center"><button type="submit" class="btn btn-color btn-outline-success px-5 mb-5 w-100">Salvar</button></div>
                   </form>
