--- a/collecor/src/main/resources/templates/login.html
+++ b/collecor/src/main/resources/templates/login.html
@@ -19,6 +19,12 @@
         margin: auto;
         width: 50%; 
       }
+      #btnLogin{
+        visibility: hidden;
+      }
+      #btnSign{
+        visibility: hidden;
+      }
     </style>
   </head>
   <body>
