--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -22,7 +22,7 @@
     <div th:replace="~{fragments :: navbar}" ></div>
     <!--pageContent-->
     <div class="card">
-      <img  class="card-img-top" src="imgs\perfil\black.jpeg" alt="capa">
+      <img  class="card-img-top" th:src="${coverPathImg}" alt="capa">
       <div class="card-body card-background ">
         <a class="position-absolute end-0 mx-2" id="btnEdit"><img src="/imgs/perfil/editBtn.png" style="height: 50px;"></a>
         <div class="d-flex justify-content-center">
@@ -49,7 +49,7 @@
                 <div class="card mt-5" style="background-color: transparent;">     
                   <form class="row gx-5" style="background-color: transparent;" method="post" th:action= "@{users/edit/} +${id}">
                     <div class="col-12 my-5">
-                      <input type="text" id="paths" name="path" class="visually-hidden" required oninvalid="this.setCustomValidity ('Escolha uma imagem')">
+                      <input type="text" id="iconPath" name="iconPath" class="visually-hidden" required oninvalid="this.setCustomValidity ('Escolha uma imagem')">
                         <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage()">
                           <img src="/imgs/profileIcons/animeAstro.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="animeAstro" alt=""> 
                         </button>
@@ -88,42 +88,12 @@
                         </button>
                         <hr class="m-5" style="color: aqua; size: 20px;">
                       <!--capa-->
-                        <input type="text" id="paths" name="path" class="visually-hidden" required oninvalid="this.setCustomValidity ('Escolha uma imagem')">
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage()">
-                          <img src="/imgs/profileIcons/animeAstro.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="animeAstro" alt=""> 
+                        <input type="text" id="coverPath" name="coverPath" class="visually-hidden" required oninvalid="this.setCustomValidity ('Escolha uma imagem')">
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectCoverImage()">
+                          <img src="/imgs/profileCovers/rino.webp" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rinoC" alt=""> 
                         </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage4()">
-                          <img src="/imgs/profileIcons/animeAstro2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="animeAstro2" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage8()">
-                          <img src="/imgs/profileIcons/astroFofa.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofa" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage9()">
-                          <img src="/imgs/profileIcons/astroFofa2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofa2" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage6()">
-                          <img src="/imgs/profileIcons/astroFofo.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofo" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage7()">
-                          <img src="/imgs/profileIcons/astroFofo2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="astroFofo2" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage3()">
-                          <img src="/imgs/profileIcons/zumbi.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="zumbi" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage2()">
-                          <img src="/imgs/profileIcons/caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="caveira" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage12()">
-                          <img src="/imgs/profileIcons/zumbi2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="zumbi2" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage5()">
-                          <img src="/imgs/profileIcons/menina_caveira.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="menina_caveira" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage10()">
-                          <img src="/imgs/profileIcons/rino_1.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rino_1" alt="">
-                        </button>
-                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectImage11()">
-                          <img src="/imgs/profileIcons/rino_2.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rino_2" alt="">
+                        <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectCoverImage2()">
+                          <img src="/imgs/profileCovers/rino2.webp" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rinoC2" alt="">
                         </button>
                     </div>
                     <div class="text-center"><button type="submit" class="btn btn-color btn-outline-success px-5 mb-5 w-100">Salvar</button></div>
