--- a/collecor/src/main/resources/templates/fragments.html
+++ b/collecor/src/main/resources/templates/fragments.html
@@ -71,10 +71,9 @@
                                     <input type="password" class="form-control" name="password" placeholder="Senha">
                                   </div>
                                   <div class="text-center"><button type="submit" class="btn btn-color btn-outline-success px-5 mb-5 w-100">Entrar</button></div>
-                                  <!--<div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
-                                    Registered? <a href="#" class="text-dark fw-bold"> Create an
-                                      Account</a>
-                                  </div>-->
+                                  <div id="emailHelp" class="form-text text-center mb-5 text-white"> Não é cadastrado? 
+                                    <a class="text-success text-decoration-underline fw-bold" style="cursor: pointer;" id="redirSign"> Registrar </a>
+                                  </div>
                                 </form>
                               </div>
                             </div>
@@ -82,7 +81,7 @@
                         </div>
                     </div>
                   </div>
-                  <div id="siginModal" class="modal">
+                  <div id="signModal" class="modal">
                     <div class="modal-content">
                       <span class="close2 close">&times;</span>
                       <div class="container">
@@ -109,10 +108,9 @@
                                   <input type="password" class="form-control" id="password" aria-describedby="emailHelp" name="password" placeholder="Senha" required>
                                 </div>
                                 <div class="text-center"><button type="submit" class="btn btn-color btn-outline-success px-5 mb-5 w-100">Cadastrar</button></div>
-                                <!--<div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
-                                  Registered? <a href="#" class="text-dark fw-bold"> Create an
-                                    Account</a>
-                                </div>-->
+                                <div id="emailHelp" class="form-text text-center mb-5 text-white"> Já é cadastrado? 
+                                  <a class="text-success text-decoration-underline fw-bold" style="cursor: pointer;" id="redirLogin"> Entrar </a>
+                                </div>
                               </form>
                             </div>
                           </div>
