--- a/collecor/src/main/resources/templates/profile.html
+++ b/collecor/src/main/resources/templates/profile.html
@@ -22,7 +22,7 @@
     <div th:replace="~{fragments :: navbar}" ></div>
     <!--pageContent-->
     <div class="card">
-      <img  class="card-img-top" th:src="${coverPathImg}" alt="capa">
+      <img  class="card-img-top img-fluid" th:src="${coverPathImg}" alt="capa">
       <div class="card-body card-background ">
         <a class="position-absolute end-0 mx-2" id="btnEdit"><img src="/imgs/perfil/editBtn.png" style="height: 50px;"></a>
         <div class="d-flex justify-content-center">
@@ -88,13 +88,15 @@
                         </button>
                         <hr class="m-5" style="color: aqua; size: 20px;">
                       <!--capa-->
+                      <div class="d-flex justify-content-center">
                         <input type="text" id="coverPath" name="coverPath" class="visually-hidden" required oninvalid="this.setCustomValidity ('Escolha uma imagem')">
                         <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectCoverImage()">
-                          <img src="/imgs/profileCovers/rino.webp" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rinoC" alt=""> 
+                          <img src="/imgs/profileCovers/rino.webp" class="img-fluid img-thumbnail" style="height: 230px;" id="rinoC" alt=""> 
                         </button>
                         <button type="button" class="border-0" style="background-color: transparent;" src="#" onclick="selectCoverImage2()">
-                          <img src="/imgs/profileCovers/rino2.webp" class="img-fluid profile-image-pic img-thumbnail rounded-circle" id="rinoC2" alt="">
+                          <img src="/imgs/profileCovers/rino2.webp" class="img-fluid img-thumbnail" style="height: 230px;" id="rinoC2" alt="">
                         </button>
+                      </div>
                     </div>
                     <div class="text-center"><button type="submit" class="btn btn-color btn-outline-success px-5 mb-5 w-100">Salvar</button></div>
                   </form>
